--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -524,12 +524,12 @@
        "3  medical_products-1  search_and_rescue-0  security-0  military-0   \n",
        "4  medical_products-0  search_and_rescue-0  security-0  military-0   \n",
        "\n",
-       "              9        ...                    26                      27  \\\n",
-       "0  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "1  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "2  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "3  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "4  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
+       "              9   ...             26                      27  \\\n",
+       "0  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "1  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "2  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "3  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "4  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
        "\n",
        "                  28        29       30      31            32      33  \\\n",
        "0  weather_related-0  floods-0  storm-0  fire-0  earthquake-0  cold-0   \n",
@@ -773,12 +773,12 @@
        "3  medical_products-1  search_and_rescue-0  security-0  military-0   \n",
        "4  medical_products-0  search_and_rescue-0  security-0  military-0   \n",
        "\n",
-       "     child_alone       ...           aid_centers    other_infrastructure  \\\n",
-       "0  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "1  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "2  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "3  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "4  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
+       "     child_alone  ...    aid_centers    other_infrastructure  \\\n",
+       "0  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "1  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "2  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "3  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "4  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
        "\n",
        "     weather_related    floods    storm    fire    earthquake    cold  \\\n",
        "0  weather_related-0  floods-0  storm-0  fire-0  earthquake-0  cold-0   \n",
@@ -1000,26 +1000,26 @@
        "3        1        1      0            1             0                 1   \n",
        "4        1        0      0            0             0                 0   \n",
        "\n",
-       "   search_and_rescue  security  military  child_alone      ...        \\\n",
-       "0                  0         0         0            0      ...         \n",
-       "1                  0         0         0            0      ...         \n",
-       "2                  0         0         0            0      ...         \n",
-       "3                  0         0         0            0      ...         \n",
-       "4                  0         0         0            0      ...         \n",
+       "   search_and_rescue  security  military  child_alone  ...  aid_centers  \\\n",
+       "0                  0         0         0            0  ...            0   \n",
+       "1                  0         0         0            0  ...            0   \n",
+       "2                  0         0         0            0  ...            0   \n",
+       "3                  0         0         0            0  ...            0   \n",
+       "4                  0         0         0            0  ...            0   \n",
        "\n",
-       "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
-       "0            0                     0                0       0      0     0   \n",
-       "1            0                     0                1       0      1     0   \n",
-       "2            0                     0                0       0      0     0   \n",
-       "3            0                     0                0       0      0     0   \n",
-       "4            0                     0                0       0      0     0   \n",
+       "   other_infrastructure  weather_related  floods  storm  fire  earthquake  \\\n",
+       "0                     0                0       0      0     0           0   \n",
+       "1                     0                1       0      1     0           0   \n",
+       "2                     0                0       0      0     0           0   \n",
+       "3                     0                0       0      0     0           0   \n",
+       "4                     0                0       0      0     0           0   \n",
        "\n",
-       "   earthquake  cold  other_weather  direct_report  \n",
-       "0           0     0              0              0  \n",
-       "1           0     0              0              0  \n",
-       "2           0     0              0              0  \n",
-       "3           0     0              0              0  \n",
-       "4           0     0              0              0  \n",
+       "   cold  other_weather  direct_report  \n",
+       "0     0              0              0  \n",
+       "1     0              0              0  \n",
+       "2     0              0              0  \n",
+       "3     0              0              0  \n",
+       "4     0              0              0  \n",
        "\n",
        "[5 rows x 36 columns]"
       ]
@@ -1337,12 +1337,12 @@
        "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
        "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
        "\n",
-       "   request  offer  aid_related  medical_help  medical_products      ...        \\\n",
-       "0        0      0            0             0                 0      ...         \n",
-       "1        0      0            1             0                 0      ...         \n",
-       "2        0      0            0             0                 0      ...         \n",
-       "3        1      0            1             0                 1      ...         \n",
-       "4        0      0            0             0                 0      ...         \n",
+       "   request  offer  aid_related  medical_help  medical_products  ...  \\\n",
+       "0        0      0            0             0                 0  ...   \n",
+       "1        0      0            1             0                 0  ...   \n",
+       "2        0      0            0             0                 0  ...   \n",
+       "3        1      0            1             0                 1  ...   \n",
+       "4        0      0            0             0                 0  ...   \n",
        "\n",
        "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
        "0            0                     0                0       0      0     0   \n",
@@ -1438,13 +1438,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Note: Convert values to binary.\n",
+    "- From the reviewer's comments, the 'related' column contains 3 unique values (0, 1, 2) which makes this category a multiclass rather than binary. So I will drop those observations to make the 'related' column a binary classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check unique values on the 'related' column\n",
+    "df.related.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove rows with a value of 2 in the 'related' column\n",
+    "df = df[df['related'] != 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# recheck unique values on the 'related' column\n",
+    "df.related.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 7. Save the clean dataset into an sqlite database.\n",
     "You can do this with pandas [`to_sql` method](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_sql.html) combined with the SQLAlchemy library. Remember to import SQLAlchemy's `create_engine` in the first cell of this notebook to use it below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
